2011-08-10  Pavel Feldman  <pfeldman@chromium.org>

        Web Inspector: there should be a way to tell what properties are non-enumerable when expanding objects.
        https://bugs.webkit.org/show_bug.cgi?id=65518

        Reviewed by Yury Semikhatsky.

        * inspector/debugger/debugger-expand-scope-expected.txt:
        * inspector/protocol/runtime-agent-expected.txt:
        * inspector/runtime/runtime-getProperties-expected.txt:
        * inspector/runtime/runtime-getProperties.html:
        * platform/chromium/inspector/runtime/runtime-getProperties-expected.txt: Removed.

2011-08-10  Alexander Pavlov  <apavlov@chromium.org>

        Web Inspector: [REGRESSION] Editor lost after committing a CSS property value for inline style
        https://bugs.webkit.org/show_bug.cgi?id=65918

        Reviewed by Pavel Feldman.

        * inspector/styles/styles-commit-editing.html:

2011-08-10  Kent Tamura  <tkent@chromium.org>

        Move <input type=datetime> tests to fast/forms/datetime/
        https://bugs.webkit.org/show_bug.cgi?id=65970

        Reviewed by Hajime Morita.

        * fast/forms/ValidityState-rangeOverflow-expected.txt: Removed "datetime" part.
        * fast/forms/ValidityState-rangeUnderflow-expected.txt: ditto.
        * fast/forms/ValidityState-stepMismatch-expected.txt: ditto.
        * fast/forms/ValidityState-typeMismatch-datetime-expected.txt: Removed.
        * fast/forms/ValidityState-typeMismatch-datetime.html: Removed.
        * fast/forms/date-input-visible-strings-expected.txt: Removed "datetime" part.
        * fast/forms/date-input-visible-strings.html: ditto.
        * fast/forms/datetime: Added.
        * fast/forms/datetime/ValidityState-rangeOverflow-datetime-expected.txt: Copied from LayoutTests/fast/forms/ValidityState-rangeOverflow-expected.txt.
        * fast/forms/datetime/ValidityState-rangeOverflow-datetime.html: Copied from LayoutTests/fast/forms/script-tests/ValidityState-rangeOverflow.js.